libs/pydegas/src/pydegas/parse/trunc/TRUNCParser.py
# Generated from TRUNC.g4 by ANTLR 4.10.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys

if sys.version_info[1] > 5:
    from typing import TextIO
else:
    from typing.io import TextIO




class TRUNCParser(Parser):
    grammarFileName = "TRUNC.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [DFA(ds, i) for i, ds in enumerate(atn.decisionToState)]

    sharedContextCache = PredictionContextCache()

    literalNames = [
        "<INVALID>",
        "'<='",
        "'<'",
        "'>'",
        "'>='",
        "'and'",
        "'or'",
        "'=='",
        "'!='",
        "'['",
        "']'",
        "'gm('",
        "','",
        "')'",
        "'_'",
        "'+'",
        "'-'",
        "'*'",
    ]

    symbolicNames = [
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "SUM",
        "SUB",
        "MUL",
        "IDV",
        "POSNUM",
        "COMM",
        "WS",
        "ALPHA",
        "DIGIT",
    ]

    RULE_trunc = 0
    RULE_ineq = 1
    RULE_inop = 2
    RULE_and_trunc = 3
    RULE_or_trunc = 4
    RULE_eq = 5
    RULE_eqop = 6
    RULE_lexpr = 7
    RULE_monom = 8
    RULE_const_expr = 9
    RULE_pos_const = 10
    RULE_const = 11
    RULE_num = 12
    RULE_var = 13
    RULE_idd = 14
    RULE_gm = 15
    RULE_list = 16
    RULE_par = 17
    RULE_aop = 18

    ruleNames = [
        "trunc",
        "ineq",
        "inop",
        "and_trunc",
        "or_trunc",
        "eq",
        "eqop",
        "lexpr",
        "monom",
        "const_expr",
        "pos_const",
        "const",
        "num",
        "var",
        "idd",
        "gm",
        "list",
        "par",
        "aop",
    ]

    EOF = Token.EOF
    T__0 = 1
    T__1 = 2
    T__2 = 3
    T__3 = 4
    T__4 = 5
    T__5 = 6
    T__6 = 7
    T__7 = 8
    T__8 = 9
    T__9 = 10
    T__10 = 11
    T__11 = 12
    T__12 = 13
    T__13 = 14
    SUM = 15
    SUB = 16
    MUL = 17
    IDV = 18
    POSNUM = 19
    COMM = 20
    WS = 21
    ALPHA = 22
    DIGIT = 23

    def __init__(self, input: TokenStream, output: TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.10.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None

    class TruncContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ineq(self):
            return self.getTypedRuleContext(TRUNCParser.IneqContext, 0)

        def eq(self):
            return self.getTypedRuleContext(TRUNCParser.EqContext, 0)

        def and_trunc(self):
            return self.getTypedRuleContext(TRUNCParser.And_truncContext, 0)

        def or_trunc(self):
            return self.getTypedRuleContext(TRUNCParser.Or_truncContext, 0)

        def getRuleIndex(self):
            return TRUNCParser.RULE_trunc

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterTrunc"):
                listener.enterTrunc(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitTrunc"):
                listener.exitTrunc(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitTrunc"):
                return visitor.visitTrunc(self)
            else:
                return visitor.visitChildren(self)

    def trunc(self):

        localctx = TRUNCParser.TruncContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_trunc)
        try:
            self.state = 42
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input, 0, self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 38
                self.ineq()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 39
                self.eq()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 40
                self.and_trunc()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 41
                self.or_trunc()
                pass

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class IneqContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def lexpr(self):
            return self.getTypedRuleContext(TRUNCParser.LexprContext, 0)

        def inop(self):
            return self.getTypedRuleContext(TRUNCParser.InopContext, 0)

        def const_expr(self):
            return self.getTypedRuleContext(TRUNCParser.Const_exprContext, 0)

        def getRuleIndex(self):
            return TRUNCParser.RULE_ineq

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterIneq"):
                listener.enterIneq(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitIneq"):
                listener.exitIneq(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitIneq"):
                return visitor.visitIneq(self)
            else:
                return visitor.visitChildren(self)

    def ineq(self):

        localctx = TRUNCParser.IneqContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_ineq)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 44
            self.lexpr()
            self.state = 45
            self.inop()
            self.state = 46
            self.const_expr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class InopContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def getRuleIndex(self):
            return TRUNCParser.RULE_inop

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterInop"):
                listener.enterInop(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitInop"):
                listener.exitInop(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitInop"):
                return visitor.visitInop(self)
            else:
                return visitor.visitChildren(self)

    def inop(self):

        localctx = TRUNCParser.InopContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_inop)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 48
            _la = self._input.LA(1)
            if not (
                ((_la) & ~0x3F) == 0
                and (
                    (1 << _la)
                    & (
                        (1 << TRUNCParser.T__0)
                        | (1 << TRUNCParser.T__1)
                        | (1 << TRUNCParser.T__2)
                        | (1 << TRUNCParser.T__3)
                    )
                )
                != 0
            ):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class And_truncContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDV(self, i: int = None):
            if i is None:
                return self.getTokens(TRUNCParser.IDV)
            else:
                return self.getToken(TRUNCParser.IDV, i)

        def inop(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(TRUNCParser.InopContext)
            else:
                return self.getTypedRuleContext(TRUNCParser.InopContext, i)

        def const_expr(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(TRUNCParser.Const_exprContext)
            else:
                return self.getTypedRuleContext(TRUNCParser.Const_exprContext, i)

        def getRuleIndex(self):
            return TRUNCParser.RULE_and_trunc

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterAnd_trunc"):
                listener.enterAnd_trunc(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitAnd_trunc"):
                listener.exitAnd_trunc(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitAnd_trunc"):
                return visitor.visitAnd_trunc(self)
            else:
                return visitor.visitChildren(self)

    def and_trunc(self):

        localctx = TRUNCParser.And_truncContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_and_trunc)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 50
            self.match(TRUNCParser.IDV)
            self.state = 51
            self.inop()
            self.state = 52
            self.const_expr()
            self.state = 53
            self.match(TRUNCParser.T__4)
            self.state = 54
            self.match(TRUNCParser.IDV)
            self.state = 55
            self.inop()
            self.state = 56
            self.const_expr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Or_truncContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDV(self, i: int = None):
            if i is None:
                return self.getTokens(TRUNCParser.IDV)
            else:
                return self.getToken(TRUNCParser.IDV, i)

        def inop(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(TRUNCParser.InopContext)
            else:
                return self.getTypedRuleContext(TRUNCParser.InopContext, i)

        def const_expr(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(TRUNCParser.Const_exprContext)
            else:
                return self.getTypedRuleContext(TRUNCParser.Const_exprContext, i)

        def getRuleIndex(self):
            return TRUNCParser.RULE_or_trunc

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterOr_trunc"):
                listener.enterOr_trunc(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitOr_trunc"):
                listener.exitOr_trunc(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitOr_trunc"):
                return visitor.visitOr_trunc(self)
            else:
                return visitor.visitChildren(self)

    def or_trunc(self):

        localctx = TRUNCParser.Or_truncContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_or_trunc)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 58
            self.match(TRUNCParser.IDV)
            self.state = 59
            self.inop()
            self.state = 60
            self.const_expr()
            self.state = 61
            self.match(TRUNCParser.T__5)
            self.state = 62
            self.match(TRUNCParser.IDV)
            self.state = 63
            self.inop()
            self.state = 64
            self.const_expr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class EqContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var(self):
            return self.getTypedRuleContext(TRUNCParser.VarContext, 0)

        def eqop(self):
            return self.getTypedRuleContext(TRUNCParser.EqopContext, 0)

        def const_expr(self):
            return self.getTypedRuleContext(TRUNCParser.Const_exprContext, 0)

        def getRuleIndex(self):
            return TRUNCParser.RULE_eq

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterEq"):
                listener.enterEq(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitEq"):
                listener.exitEq(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitEq"):
                return visitor.visitEq(self)
            else:
                return visitor.visitChildren(self)

    def eq(self):

        localctx = TRUNCParser.EqContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_eq)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 66
            self.var()
            self.state = 67
            self.eqop()
            self.state = 68
            self.const_expr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class EqopContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def getRuleIndex(self):
            return TRUNCParser.RULE_eqop

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterEqop"):
                listener.enterEqop(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitEqop"):
                listener.exitEqop(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitEqop"):
                return visitor.visitEqop(self)
            else:
                return visitor.visitChildren(self)

    def eqop(self):

        localctx = TRUNCParser.EqopContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_eqop)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            _la = self._input.LA(1)
            if not (_la == TRUNCParser.T__6 or _la == TRUNCParser.T__7):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class LexprContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def monom(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(TRUNCParser.MonomContext)
            else:
                return self.getTypedRuleContext(TRUNCParser.MonomContext, i)

        def aop(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(TRUNCParser.AopContext)
            else:
                return self.getTypedRuleContext(TRUNCParser.AopContext, i)

        def getRuleIndex(self):
            return TRUNCParser.RULE_lexpr

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterLexpr"):
                listener.enterLexpr(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitLexpr"):
                listener.exitLexpr(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitLexpr"):
                return visitor.visitLexpr(self)
            else:
                return visitor.visitChildren(self)

    def lexpr(self):

        localctx = TRUNCParser.LexprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_lexpr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 72
            self.monom()
            self.state = 78
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input, 1, self._ctx)
            while _alt != 1 and _alt != ATN.INVALID_ALT_NUMBER:
                if _alt == 1 + 1:
                    self.state = 73
                    self.aop()
                    self.state = 74
                    self.monom()
                self.state = 80
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input, 1, self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class MonomContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var(self):
            return self.getTypedRuleContext(TRUNCParser.VarContext, 0)

        def const(self):
            return self.getTypedRuleContext(TRUNCParser.ConstContext, 0)

        def MUL(self):
            return self.getToken(TRUNCParser.MUL, 0)

        def getRuleIndex(self):
            return TRUNCParser.RULE_monom

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterMonom"):
                listener.enterMonom(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitMonom"):
                listener.exitMonom(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitMonom"):
                return visitor.visitMonom(self)
            else:
                return visitor.visitChildren(self)

    def monom(self):

        localctx = TRUNCParser.MonomContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_monom)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input, 2, self._ctx)
            if la_ == 1:
                self.state = 81
                self.const()
                self.state = 82
                self.match(TRUNCParser.MUL)

            self.state = 86
            self.var()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Const_exprContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def const(self):
            return self.getTypedRuleContext(TRUNCParser.ConstContext, 0)

        def aop(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(TRUNCParser.AopContext)
            else:
                return self.getTypedRuleContext(TRUNCParser.AopContext, i)

        def pos_const(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(TRUNCParser.Pos_constContext)
            else:
                return self.getTypedRuleContext(TRUNCParser.Pos_constContext, i)

        def getRuleIndex(self):
            return TRUNCParser.RULE_const_expr

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterConst_expr"):
                listener.enterConst_expr(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitConst_expr"):
                listener.exitConst_expr(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitConst_expr"):
                return visitor.visitConst_expr(self)
            else:
                return visitor.visitChildren(self)

    def const_expr(self):

        localctx = TRUNCParser.Const_exprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_const_expr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88
            self.const()
            self.state = 94
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input, 3, self._ctx)
            while _alt != 1 and _alt != ATN.INVALID_ALT_NUMBER:
                if _alt == 1 + 1:
                    self.state = 89
                    self.aop()
                    self.state = 90
                    self.pos_const()
                self.state = 96
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input, 3, self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Pos_constContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def POSNUM(self):
            return self.getToken(TRUNCParser.POSNUM, 0)

        def par(self):
            return self.getTypedRuleContext(TRUNCParser.ParContext, 0)

        def idd(self):
            return self.getTypedRuleContext(TRUNCParser.IddContext, 0)

        def getRuleIndex(self):
            return TRUNCParser.RULE_pos_const

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterPos_const"):
                listener.enterPos_const(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitPos_const"):
                listener.exitPos_const(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitPos_const"):
                return visitor.visitPos_const(self)
            else:
                return visitor.visitChildren(self)

    def pos_const(self):

        localctx = TRUNCParser.Pos_constContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_pos_const)
        try:
            self.state = 100
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [TRUNCParser.POSNUM]:
                self.enterOuterAlt(localctx, 1)
                self.state = 97
                self.match(TRUNCParser.POSNUM)
                pass
            elif token in [TRUNCParser.T__13]:
                self.enterOuterAlt(localctx, 2)
                self.state = 98
                self.par()
                pass
            elif token in [TRUNCParser.IDV]:
                self.enterOuterAlt(localctx, 3)
                self.state = 99
                self.idd()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ConstContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def num(self):
            return self.getTypedRuleContext(TRUNCParser.NumContext, 0)

        def par(self):
            return self.getTypedRuleContext(TRUNCParser.ParContext, 0)

        def idd(self):
            return self.getTypedRuleContext(TRUNCParser.IddContext, 0)

        def getRuleIndex(self):
            return TRUNCParser.RULE_const

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterConst"):
                listener.enterConst(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitConst"):
                listener.exitConst(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitConst"):
                return visitor.visitConst(self)
            else:
                return visitor.visitChildren(self)

    def const(self):

        localctx = TRUNCParser.ConstContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_const)
        try:
            self.state = 105
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [TRUNCParser.SUB, TRUNCParser.POSNUM]:
                self.enterOuterAlt(localctx, 1)
                self.state = 102
                self.num()
                pass
            elif token in [TRUNCParser.T__13]:
                self.enterOuterAlt(localctx, 2)
                self.state = 103
                self.par()
                pass
            elif token in [TRUNCParser.IDV]:
                self.enterOuterAlt(localctx, 3)
                self.state = 104
                self.idd()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class NumContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def POSNUM(self):
            return self.getToken(TRUNCParser.POSNUM, 0)

        def SUB(self):
            return self.getToken(TRUNCParser.SUB, 0)

        def getRuleIndex(self):
            return TRUNCParser.RULE_num

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterNum"):
                listener.enterNum(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitNum"):
                listener.exitNum(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitNum"):
                return visitor.visitNum(self)
            else:
                return visitor.visitChildren(self)

    def num(self):

        localctx = TRUNCParser.NumContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_num)
        try:
            self.state = 110
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [TRUNCParser.POSNUM]:
                self.enterOuterAlt(localctx, 1)
                self.state = 107
                self.match(TRUNCParser.POSNUM)
                pass
            elif token in [TRUNCParser.SUB]:
                self.enterOuterAlt(localctx, 2)
                self.state = 108
                self.match(TRUNCParser.SUB)
                self.state = 109
                self.match(TRUNCParser.POSNUM)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VarContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDV(self):
            return self.getToken(TRUNCParser.IDV, 0)

        def idd(self):
            return self.getTypedRuleContext(TRUNCParser.IddContext, 0)

        def gm(self):
            return self.getTypedRuleContext(TRUNCParser.GmContext, 0)

        def getRuleIndex(self):
            return TRUNCParser.RULE_var

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterVar"):
                listener.enterVar(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitVar"):
                listener.exitVar(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitVar"):
                return visitor.visitVar(self)
            else:
                return visitor.visitChildren(self)

        def _getText(self, data):
            if self.idd():
                return self.idd().getVar(data)
            else:
                return self.getText()

    def var(self):

        localctx = TRUNCParser.VarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_var)
        try:
            self.state = 115
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input, 7, self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 112
                self.match(TRUNCParser.IDV)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 113
                self.idd()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 114
                self.gm()
                pass

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class IddContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDV(self, i: int = None):
            if i is None:
                return self.getTokens(TRUNCParser.IDV)
            else:
                return self.getToken(TRUNCParser.IDV, i)

        def num(self):
            return self.getTypedRuleContext(TRUNCParser.NumContext, 0)

        def getRuleIndex(self):
            return TRUNCParser.RULE_idd

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterIdd"):
                listener.enterIdd(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitIdd"):
                listener.exitIdd(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitIdd"):
                return visitor.visitIdd(self)
            else:
                return visitor.visitChildren(self)

        def getVar(self, data):
            if self.IDV(1) is None:
                return self.getText()
            else:
                data_idx = int(data[self.IDV(1).getText()][0].item())
                return self.IDV(0).getText() + "[" + str(data_idx) + "]"

        def getValue(self, data):
            data_name = self.IDV(0).getText()
            if self.num() is not None:
                data_idx = int(self.num().getText())
            elif self.IDV(1) is not None:
                data_idx = int(data[self.IDV(1).getText()][0].item())
            return data[data_name][data_idx]

    def idd(self):

        localctx = TRUNCParser.IddContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_idd)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            self.match(TRUNCParser.IDV)
            self.state = 118
            self.match(TRUNCParser.T__8)
            self.state = 121
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [TRUNCParser.SUB, TRUNCParser.POSNUM]:
                self.state = 119
                self.num()
                pass
            elif token in [TRUNCParser.IDV]:
                self.state = 120
                self.match(TRUNCParser.IDV)
                pass
            else:
                raise NoViableAltException(self)

            self.state = 123
            self.match(TRUNCParser.T__9)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class GmContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def list_(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(TRUNCParser.ListContext)
            else:
                return self.getTypedRuleContext(TRUNCParser.ListContext, i)

        def getRuleIndex(self):
            return TRUNCParser.RULE_gm

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterGm"):
                listener.enterGm(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitGm"):
                listener.exitGm(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitGm"):
                return visitor.visitGm(self)
            else:
                return visitor.visitChildren(self)

    def gm(self):

        localctx = TRUNCParser.GmContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_gm)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125
            self.match(TRUNCParser.T__10)
            self.state = 126
            self.list_()
            self.state = 127
            self.match(TRUNCParser.T__11)
            self.state = 128
            self.list_()
            self.state = 129
            self.match(TRUNCParser.T__11)
            self.state = 130
            self.list_()
            self.state = 131
            self.match(TRUNCParser.T__12)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ListContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def num(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(TRUNCParser.NumContext)
            else:
                return self.getTypedRuleContext(TRUNCParser.NumContext, i)

        def par(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(TRUNCParser.ParContext)
            else:
                return self.getTypedRuleContext(TRUNCParser.ParContext, i)

        def getRuleIndex(self):
            return TRUNCParser.RULE_list

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterList"):
                listener.enterList(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitList"):
                listener.exitList(self)
